--- a/Main.html
+++ b/Main.html
@@ -2,39 +2,28 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>CRUD_project</title>
+	<title>CRUD</title>
 </head>
 <body>
-	<h2>(title)</h2>
+	<h1>먹고싶은 음식</h1>
 
 	<form>
-		<input type="text" id="add_text" size="15">
-		<input type="submit" value="추가">
-		
-		<br><br>
-		<table>
-			<tr>
-				<th>
-					tablename
-					<input type="button" value="수정">
-					<input type="button" value="삭제">
-				</th>
-			</tr>
-			<tr>
-				<tbody id="data">
-					
-				</tbody>
-			</tr>
-			<!--<tr>
-				<td>
-				<input type="checkbox">
-				<br>
-				<input type="text">
-				</td>
-			</tr>-->
-		</table>
+		<label>음식이름</label>
+		<br>
+		<input type="text" size="7">
+		</label>
+		<input type="submit" value="작성">
 	</form>
-
-	<script type="text/javascript" src=""></script>
+	<br>
+	<table>
+		<thead>
+			<tr>
+				<th>음식들</th>
+			</tr>
+		</thead>
+		<tbody>
+			
+		</tbody>
+	</table>
 </body>
 </html>
