HTML : 경고문구 추가(다시 입력해주세요.), 스타일시트 추가(경고문 숨김) JavaScript : 입력 창에 값이 없을 경우 경고문구 출력, operate()에 조건 추가

--- a/Main.html
+++ b/Main.html
@@ -3,12 +3,16 @@
 <head>
 	<meta charset="utf-8">
 	<title>CRUD</title>
+	<style type="text/css">
+		.hide {display: none;}
+	</style>
 </head>
 <body>
 	<h1>먹고싶은 음식</h1>
 
 	<form onsubmit="event.preventDefault();operate();">
 		<label>음식이름</label>
+		<label class="hide" id="error">다시 입력해주세요.</label>
 		<br>
 		<input type="text" size="7" id="foodName">
 		
