HTML : 검색창 추가 Javascript : 검색 기능 추가

--- a/Main.html
+++ b/Main.html
@@ -17,7 +17,10 @@
 		<input type="text" size="7" id="foodName">
 		
 		<input type="submit" value="작성">
+		<br>
+		<input type="text" size="10" id="search_foodName" onkeyup="search();">
 	</form>
+	
 	<br>
 	<table id="foodList">
 		<thead>
