HTML : 찜 목록 추가 Javascript : 찜 목록 추가 버튼 생성, 찜 목록 기능 추가

--- a/Main.html
+++ b/Main.html
@@ -33,6 +33,17 @@
 		</tbody>
 	</table>
 
+	<table id="pickedList">
+		<thead>
+			<tr>
+				<th>찜 목록</th>	
+			</tr>
+		</thead>
+		<tbody>
+				
+		</tbody>
+	</table>
+
 	<script src="script.js"></script>
 </body>
 </html>
